syntax = "proto3";

package photograftai;

service MaskService {
  rpc GetMask(GetMaskRequest) returns (GetMaskResponse) {}
}

message GetMaskRequest {
  string image_id = 1;
  repeated float points = 2;
}

message GetMaskResponse {
  float score = 1;
  bytes mask = 2;
}